# Pepper-Tracker

./: .gitignore  Procfile  README.md  procfile  pyproject.toml  requirements.txt  seed.py  seed_default_user.py
data/: __init__.py  plants.py
migrations/versions/: 06e9c75e3db6_update_dead_column_to_int_and_add_.py  2b2d405795c6_initial_migration.py  eabc407347fc_initial_migration.py  fee39bcacd13_add_fruits_column_to_pepperplant_model.py
pepper_tracker/: __init__.py  app.py  auth.py  forms.py  main.py  models.py
pepper_tracker/static/js/: main.js
pepper_tracker/templates/: index.html  login.html
